Update build definition

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 mono: none
 sudo: required
-dist: trusty
+dotnet: 3.1
 addons:
   apt:
     packages:
@@ -11,10 +11,6 @@ addons:
     - libssl-dev
     - libunwind8
     - zlib1g
-install:
-  - export DOTNET_INSTALL_DIR="$PWD/.dotnetcli"
-  - curl -sSL https://raw.githubusercontent.com/dotnet/cli/rel/1.0.0/scripts/obtain/dotnet-install.sh | bash /dev/stdin --version latest --install-dir "$DOTNET_INSTALL_DIR"
-  - export PATH="$DOTNET_INSTALL_DIR:$PATH"
 script:
   - dotnet restore
-  - dotnet test ./Rijndael256.Tests/Rijndael256.Tests.csproj -c Release -f netcoreapp1.0
+  - dotnet test ./Rijndael256.Tests/Rijndael256.Tests.csproj
